Update to 1.0.5: - Add new options for which style to check the boost for when using melee. You can choose between strength only or both attack and strength. Defense boost is effectively no longer being checked. Fixes #13 and #16. - Add saturated heart and fix the logic that determines if your imbued or saturated heart is available. Fixes #14. - Add Divine magic potions. Fixes #18. - Fix issue where sipping potions or using smelling salts in TOA caused an alert or failed to clear an existing one. Fixes #19. - Fix longrange on Tumeken's shadow, which was incorrectly tracking as melee.